styles.css
/* reset styles */
* {
  margin: 0;
  padding: 0;
}

html {
  box-sizing: border-box;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

body {
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 25px;
}

.instrument-container {
  display: flex;
  gap: 20px;
}

.row {
  display: flex;
}

.pixel {
  border: 1px solid black;
  background-color: rgb(255, 255, 255);
}

